--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ __pycache__
 landingpage.zip
 mod-1-28-mapa-da-estrutura-do-eventex.xmind
 mod-1-28-mapa-da-estrutura-do-eventex.zip
+mod-1-29-visao-alem-do-alcance.xmind
+mod-1-29-visao-alem-do-alcance.zip
