--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ mod-1-28-mapa-da-estrutura-do-eventex.xmind
 mod-1-28-mapa-da-estrutura-do-eventex.zip
 mod-1-29-visao-alem-do-alcance.xmind
 mod-1-29-visao-alem-do-alcance.zip
+staticfiles
